--- a/themes/mediqueenclinic/css/template.css
+++ b/themes/mediqueenclinic/css/template.css
@@ -93,8 +93,9 @@ p {
 
 .nav-link {
 	padding-right: 2rem !important;
-	padding-left: 2rem !important;
+	/* padding-left: 2rem !important; */
 	margin-top: 15px;
+	font-weight: bold;
 }
 
 .search-box {
