--- a/themes/mediqueenclinic/css/template.css
+++ b/themes/mediqueenclinic/css/template.css
@@ -179,10 +179,19 @@ p{line-height: 25px;}
 	.leftmenu ul{padding: 0; margin: 0;}
 	.leftmenu ul li{ padding-left: 10px;  padding-top: 4px; padding-bottom: 4px; padding-right: 4px;  margin: 0; list-style: none; background-color: #ead9ed;  margin-top: 15px; margin-bottom: 15px; color: #555; display: block;}
 	.leftmenu ul li:hover,.leftmenu ul li.active{ color: #fff ; background-color: #b879bf;}
-	.leftmenu ul li a.active{ display:block; color: #fff ; background-color: #b879bf;  margin:0;}
+	.leftmenu ul li a.active{  display: block; color: #fff ; background-color: #b879bf;  margin:0;}
 	.leftmenu ul li a{color: #555; text-decoration: none; display: block;}
 	.leftmenu ul li a:hover{color: #fff; text-decoration: none; display: block;}
 	.leftmenu ul li.active a{ color: #fff !important ;}
+
+	/* leftmenu-article */
+	.leftmenu-article ul{padding: 0; margin: 0;}
+	.leftmenu-article ul li{  margin: 0; list-style: none; background-color: #ead9ed;  margin-top: 15px; margin-bottom: 15px; color: #555; display: block;}
+	.leftmenu-article ul li:hover,.leftmenu ul li.active{ color: #fff ; background-color: #b879bf;}
+	.leftmenu-article ul li a.active{  display: block; color: #fff ; background-color: #b879bf;  margin:0;}
+	.leftmenu-article ul li a{padding-left: 10px;  padding-top: 4px; padding-bottom: 4px; padding-right: 4px;  color: #555; text-decoration: none; display: block;}
+	.leftmenu-article ul li a:hover{color: #fff; text-decoration: none; display: block;}
+	.leftmenu-article ul li.active a{ color: #fff !important ;}
 	
 /* TAB */
 .box-tab{float:right;}
