--- a/themes/mediqueenclinic/css/template.css
+++ b/themes/mediqueenclinic/css/template.css
@@ -493,3 +493,19 @@ img.img-fluid.mr {    margin-bottom: 20px;}
 	color: #9001a3 !important;
 	border: 1px solid #cda8d2 !important;
 }
+
+.news-head p {    margin-top:5px;    font-size : 15px;    line-height: 22px;    color:#337ab7;   }
+.news-head a {    font-size: 16px;    font-weight: bold;    text-transform: uppercase;    color:#000;}
+.news-head{    padding-top: 10px;}
+.image-block{float:left; width:100%; margin-bottom:10px;}
+.media-heading {
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+blockquote {   padding: 10px 20px;    margin: 0 0 20px;    font-size: 17.5px;    border-left: 5px solid #eee;}
+.well {    min-height: 20px;    padding: 10px;    margin-bottom: 20px;    background-color: #f5f5f5;    border: 1px solid #e3e3e3;
+    border-radius: 4px;    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05);    box-shadow: inset 0 1px 1px rgba(0,0,0,.05);}
+blockquote footer, blockquote small, blockquote .small {display: block;font-size: 80%; line-height: 1.42857143; color: #777; }
+.lead { margin-top: 20px;    margin-bottom: 20px;  font-size: 21px;   font-weight: 300;    line-height: 1.4;}
+.title-Rhinoplasty{color: #e41b80; font-size: 20px;font-weight: bold; text-shadow: none; }
+.text-Rhinoplasty{color: #8301a4;}
